# harness-coding-agent

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  MEMO.md  Makefile  README.md  SPEC.md  pyproject.toml
.claude/: settings.json
evals/retrieval/: eval_recall.py  labeled_pairs.py
fixture_repo/: app.py  calculator.py  test_calculator.py
src/agent/: errors.py  logging_config.py  main.py
src/agent/graph/: context_manager.py  graph.py  nodes.py  state.py
src/agent/mcp_client/: client.py
src/agent/models/: ast.py  ci.py  deps.py  fs.py  git.py  test.py  tool_io.py
src/agent/resilience/: __init__.py  limiter.py  retry.py
src/agent/retrieval/: __init__.py  embedder.py  registry.py  retriever.py  store.py
src/agent/servers/: ast_server.py  ci_server.py  deps_server.py  fs_server.py  git_server.py  test_server.py
src/agent/subagent/: __init__.py  contract.py  runner.py  tool.py
tests/: conftest.py
tests/integration/: test_agent_integration.py  test_long_horizon.py  test_subagent_spawn.py
tests/unit/: test_ast_models.py  test_ci_models.py  test_compaction_integration.py  test_context_manager.py  test_deps_models.py  test_embedder.py  test_fs_models.py  test_git_models.py  test_loop_detection.py  test_path_resolution.py  test_rate_limiter.py  test_registry.py  test_retriever.py  test_retry.py  test_subagent_isolation.py  test_test_models.py
tools/: diagnose_mcp.py
