[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2",
    "langchain-groq>=0.2",
    "langchain-mcp-adapters>=0.1",
    "mcp>=1.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "sentence-transformers>=2.7",
    "psycopg[binary]>=3.1",
    "pgvector>=0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
agent = "agent.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests requiring GROQ_API_KEY",
]
